--- a/app/src/main/res/layout/one_product.xml
+++ b/app/src/main/res/layout/one_product.xml
@@ -93,6 +93,7 @@
             tools:layout_editor_absoluteX="263dp"
             tools:layout_editor_absoluteY="93dp" />
 
+
         <EditText
             android:id="@+id/edittext3"
             android:layout_width="71dp"
@@ -133,5 +134,23 @@
             android:text="Dodaj"
             tools:layout_editor_absoluteX="162dp"
             tools:layout_editor_absoluteY="271dp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/button_one"
+            android:layout_below="@+id/textView6"
+            android:layout_marginTop="36dp"
+            android:text="kategoria" />
+
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/textView7"
+            android:layout_marginStart="19dp"
+            android:layout_toEndOf="@+id/textView7" />
+
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
