--- a/app/src/main/res/layout/one_product.xml
+++ b/app/src/main/res/layout/one_product.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="68dp">
+        tools:layout_editor_absoluteY="16dp">
 
         <TextView
             android:id="@+id/textView"
@@ -19,77 +21,29 @@
             tools:layout_editor_absoluteX="162dp"
             tools:layout_editor_absoluteY="16dp" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/edittext1"
-            android:layout_alignBottom="@+id/edittext1"
-            android:layout_marginEnd="52dp"
-            android:layout_toStartOf="@+id/button_one"
-            android:text="Nazwa"
-            tools:layout_editor_absoluteX="54dp"
-            tools:layout_editor_absoluteY="63dp" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/edittext3"
-            android:layout_marginEnd="29dp"
-            android:layout_toStartOf="@+id/edittext2"
-            android:text="cena"
-            tools:layout_editor_absoluteX="171dp"
-            tools:layout_editor_absoluteY="93dp" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/edittext3"
-            android:layout_alignEnd="@+id/textView3"
-            android:text="data"
-            tools:layout_editor_absoluteX="163dp"
-            tools:layout_editor_absoluteY="126dp" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/edittext5"
-            android:layout_alignEnd="@+id/textView4"
-            android:text="kraj"
-            tools:layout_editor_absoluteX="115dp"
-            tools:layout_editor_absoluteY="165dp" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/edittext5"
-            android:layout_alignEnd="@+id/textView5"
-            android:text="ilosc"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="205dp" />
 
         <EditText
             android:id="@+id/edittext1"
             android:layout_width="223dp"
             android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/textView"
-            android:layout_marginTop="12dp"
+            android:layout_alignEnd="@+id/button_one"
+            android:layout_below="@+id/textView7"
+            android:layout_marginTop="27dp"
             android:hint="nazwa"
-            android:inputType="text" />
+            android:inputType="text"
+            android:visibility="visible" />
 
         <EditText
             android:id="@+id/edittext2"
             android:layout_width="71dp"
             android:layout_height="40dp"
+            android:layout_alignBaseline="@+id/edittext1"
+            android:layout_alignBottom="@+id/edittext1"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/edittext1"
-            android:layout_marginEnd="17dp"
+            android:layout_marginEnd="24dp"
+            android:hint="cena"
             android:inputType="number"
+            android:visibility="visible"
             tools:layout_editor_absoluteX="263dp"
             tools:layout_editor_absoluteY="93dp" />
 
@@ -98,9 +52,12 @@
             android:id="@+id/edittext3"
             android:layout_width="71dp"
             android:layout_height="40dp"
-            android:layout_alignStart="@+id/edittext2"
-            android:layout_below="@+id/edittext2"
+            android:layout_alignBaseline="@+id/edittext8"
+            android:layout_alignBottom="@+id/edittext8"
+            android:layout_alignEnd="@+id/edittext6"
+            android:hint="rok produkcji"
             android:inputType="number"
+            android:visibility="visible"
             tools:layout_editor_absoluteX="263dp"
             tools:layout_editor_absoluteY="126dp" />
 
@@ -108,9 +65,12 @@
             android:id="@+id/edittext4"
             android:layout_width="71dp"
             android:layout_height="40dp"
-            android:layout_alignStart="@+id/edittext3"
-            android:layout_below="@+id/edittext3"
+            android:layout_alignBottom="@+id/edittext5"
+            android:layout_alignStart="@+id/edittext2"
+            android:layout_below="@+id/edittext2"
+            android:hint="kraj"
             android:inputType="text"
+            android:visibility="visible"
             tools:layout_editor_absoluteX="263dp"
             tools:layout_editor_absoluteY="165dp" />
 
@@ -118,8 +78,9 @@
             android:id="@+id/edittext5"
             android:layout_width="71dp"
             android:layout_height="40dp"
-            android:layout_alignStart="@+id/edittext4"
-            android:layout_below="@+id/edittext4"
+            android:layout_alignStart="@+id/edittext1"
+            android:layout_below="@+id/edittext1"
+            android:hint="ilość"
             android:inputType="number"
             tools:layout_editor_absoluteX="263dp"
             tools:layout_editor_absoluteY="202dp" />
@@ -128,9 +89,9 @@
             android:id="@+id/button_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView6"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="83dp"
+            android:layout_marginBottom="21dp"
             android:text="Dodaj"
             tools:layout_editor_absoluteX="162dp"
             tools:layout_editor_absoluteY="271dp" />
@@ -139,18 +100,74 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/button_one"
-            android:layout_below="@+id/textView6"
-            android:layout_marginTop="36dp"
+            android:layout_alignBottom="@+id/spinner1"
             android:text="kategoria" />
 
         <Spinner
             android:id="@+id/spinner1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/textView7"
-            android:layout_marginStart="19dp"
+            android:layout_below="@+id/textView"
+            android:layout_marginStart="33dp"
+            android:layout_marginTop="21dp"
             android:layout_toEndOf="@+id/textView7" />
+
+        <EditText
+            android:id="@+id/edittext6"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_alignStart="@+id/edittext10"
+            android:layout_below="@+id/edittext3"
+            android:hint="producent"
+            android:inputType="text"
+            tools:layout_editor_absoluteX="283dp"
+            tools:layout_editor_absoluteY="222dp" />
+
+        <EditText
+            android:id="@+id/edittext7"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/edittext4"
+            android:layout_marginTop="13dp"
+            android:hint="opis"
+            android:inputType="text"
+            tools:layout_editor_absoluteX="300dp"
+            tools:layout_editor_absoluteY="300dp" />
+
+        <EditText
+            android:id="@+id/edittext8"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/edittext7"
+            android:layout_marginTop="28dp"
+            android:hint="kolor"
+            android:inputType="text"
+            tools:layout_editor_absoluteX="283dp"
+            tools:layout_editor_absoluteY="222dp" />
+
+        <EditText
+            android:id="@+id/edittext9"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_alignEnd="@+id/edittext8"
+            android:layout_below="@+id/edittext8"
+            android:hint="rozmiar"
+            android:inputType="number"
+            tools:layout_editor_absoluteX="283dp"
+            tools:layout_editor_absoluteY="222dp" />
+
+        <EditText
+            android:id="@+id/edittext10"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/edittext6"
+            android:layout_toEndOf="@+id/button_one"
+            android:hint="model"
+            android:inputType="text"
+            tools:layout_editor_absoluteX="283dp"
+            tools:layout_editor_absoluteY="222dp" />
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
