--- a/app/src/main/res/layout/one_product.xml
+++ b/app/src/main/res/layout/one_product.xml
@@ -6,10 +6,13 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp">
+        android:id="@+id/relativeLayout2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView"
@@ -30,8 +33,7 @@
             android:layout_below="@+id/textView7"
             android:layout_marginTop="27dp"
             android:hint="nazwa"
-            android:inputType="text"
-            />
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/edittext2"
@@ -44,8 +46,7 @@
             android:hint="cena"
             android:inputType="number"
             tools:layout_editor_absoluteX="263dp"
-            tools:layout_editor_absoluteY="93dp"
-            />
+            tools:layout_editor_absoluteY="93dp" />
 
 
         <EditText
@@ -81,8 +82,7 @@
             android:hint="ilość"
             android:inputType="number"
             tools:layout_editor_absoluteX="263dp"
-            tools:layout_editor_absoluteY="202dp"
-             />
+            tools:layout_editor_absoluteY="202dp" />
 
         <Button
             android:id="@+id/button_one"
@@ -120,8 +120,7 @@
             android:hint="producent"
             android:inputType="text"
             tools:layout_editor_absoluteX="283dp"
-            tools:layout_editor_absoluteY="222dp"
-            />
+            tools:layout_editor_absoluteY="222dp" />
 
         <EditText
             android:id="@+id/edittext7"
@@ -133,8 +132,7 @@
             android:hint=" opis"
             android:inputType="text"
             tools:layout_editor_absoluteX="300dp"
-            tools:layout_editor_absoluteY="300dp"
-             />
+            tools:layout_editor_absoluteY="300dp" />
 
         <EditText
             android:id="@+id/edittext8"
@@ -146,8 +144,7 @@
             android:hint="kolor"
             android:inputType="text"
             tools:layout_editor_absoluteX="283dp"
-            tools:layout_editor_absoluteY="222dp"
-             />
+            tools:layout_editor_absoluteY="222dp" />
 
         <EditText
             android:id="@+id/edittext9"
@@ -169,8 +166,7 @@
             android:hint="model"
             android:inputType="text"
             tools:layout_editor_absoluteX="283dp"
-            tools:layout_editor_absoluteY="222dp"
-             />
+            tools:layout_editor_absoluteY="222dp" />
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
