--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,17 +45,40 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/relativeLayout"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            >
+            android:layout_marginStart="8dp">
 
             <ListView
                 android:id="@+id/lista"
                 android:layout_width="match_parent"
-                android:layout_height="403dp"
-                android:layout_marginBottom="100dp"
+                android:layout_height="350dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="1000dp" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="25dp"
+                android:text="cofnij" />
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/button2"
+                android:layout_alignBottom="@+id/button2"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="22dp"
+                android:text="ponow" />
+
+
         </RelativeLayout>
     </RelativeLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
