--- a/app/src/main/res/layout/one_product.xml
+++ b/app/src/main/res/layout/one_product.xml
@@ -6,10 +6,13 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp">
+        android:id="@+id/relativeLayout2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView"
@@ -30,8 +33,7 @@
             android:layout_below="@+id/textView7"
             android:layout_marginTop="27dp"
             android:hint="nazwa"
-            android:inputType="text"
-            />
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/edittext2"
@@ -44,17 +46,16 @@
             android:hint="cena"
             android:inputType="number"
             tools:layout_editor_absoluteX="263dp"
-            tools:layout_editor_absoluteY="93dp"
-            />
+            tools:layout_editor_absoluteY="93dp" />
 
 
         <EditText
             android:id="@+id/edittext3"
             android:layout_width="120dp"
             android:layout_height="40dp"
-            android:layout_alignBaseline="@+id/edittext8"
-            android:layout_alignBottom="@+id/edittext8"
-            android:layout_toEndOf="@+id/textView"
+            android:layout_below="@+id/edittext7"
+            android:layout_marginTop="11dp"
+            android:layout_toRightOf="@+id/textView"
             android:hint="rok produkcji"
             android:inputType="number"
             tools:layout_editor_absoluteX="263dp"
@@ -81,8 +82,7 @@
             android:hint="ilość"
             android:inputType="number"
             tools:layout_editor_absoluteX="263dp"
-            tools:layout_editor_absoluteY="202dp"
-             />
+            tools:layout_editor_absoluteY="202dp" />
 
         <Button
             android:id="@+id/button_one"
@@ -115,46 +115,42 @@
             android:id="@+id/edittext6"
             android:layout_width="120dp"
             android:layout_height="40dp"
-            android:layout_alignStart="@+id/edittext10"
+            android:layout_alignLeft="@+id/edittext3"
             android:layout_below="@+id/edittext3"
             android:hint="producent"
             android:inputType="text"
             tools:layout_editor_absoluteX="283dp"
-            tools:layout_editor_absoluteY="222dp"
-            />
+            tools:layout_editor_absoluteY="222dp" />
 
         <EditText
             android:id="@+id/edittext7"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_below="@+id/edittext4"
-            android:layout_marginTop="13dp"
             android:hint=" opis"
             android:inputType="text"
             tools:layout_editor_absoluteX="300dp"
-            tools:layout_editor_absoluteY="300dp"
-             />
+            tools:layout_editor_absoluteY="300dp" />
 
         <EditText
             android:id="@+id/edittext8"
             android:layout_width="120dp"
             android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/edittext7"
-            android:layout_marginTop="28dp"
+            android:layout_alignBaseline="@+id/edittext10"
+            android:layout_alignBottom="@+id/edittext10"
+            android:layout_alignParentLeft="true"
             android:hint="kolor"
             android:inputType="text"
             tools:layout_editor_absoluteX="283dp"
-            tools:layout_editor_absoluteY="222dp"
-             />
+            tools:layout_editor_absoluteY="222dp" />
 
         <EditText
             android:id="@+id/edittext9"
             android:layout_width="120dp"
             android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/edittext8"
+            android:layout_above="@+id/edittext8"
+            android:layout_alignParentLeft="true"
             android:hint="rozmiar"
             android:inputType="number"
             tools:layout_editor_absoluteX="283dp"
@@ -165,12 +161,11 @@
             android:layout_width="120dp"
             android:layout_height="40dp"
             android:layout_below="@+id/edittext6"
-            android:layout_toEndOf="@+id/button_one"
+            android:layout_toRightOf="@+id/textView"
             android:hint="model"
             android:inputType="text"
             tools:layout_editor_absoluteX="283dp"
-            tools:layout_editor_absoluteY="222dp"
-             />
+            tools:layout_editor_absoluteY="222dp" />
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
