new functionality in ProductDetail

--- a/app/src/main/res/layout/product_details.xml
+++ b/app/src/main/res/layout/product_details.xml
@@ -10,6 +10,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/text_details"
-            android:text="brak"/>
+            android:text="brak"
+            android:textSize="40dp"
+            />
     </RelativeLayout>>
 </android.support.constraint.ConstraintLayout>
