--- a/app/src/main/res/layout/one_product.xml
+++ b/app/src/main/res/layout/one_product.xml
@@ -171,6 +171,37 @@
             tools:layout_editor_absoluteX="283dp"
             tools:layout_editor_absoluteY="222dp"
              />
+        ///////
+        <EditText
+            android:id="@+id/edittext11"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/edittext10"
+            android:hint="podatek"
+            android:inputType="text"
+            tools:layout_editor_absoluteX="233dp"
+            tools:layout_editor_absoluteY="292dp"
+             />
+         <EditText
+            android:id="@+id/edittext12"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/edittext11"
+            android:hint="podatek"
+            android:inputType="data_przydatnosci"
+            tools:layout_editor_absoluteX="283dp"
+            tools:layout_editor_absoluteY="312dp"
+             />
+         <EditText
+            android:id="@+id/edittext13"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/edittext12"
+            android:hint="miasto"
+            android:inputType="data_przydatnosci"
+            tools:layout_editor_absoluteX="312dp"
+            tools:layout_editor_absoluteY="333dp"
+             />
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
